order header height set

--- a/ChefMate/Chefmate.UI/Themes/MenumateTheme.xaml
+++ b/ChefMate/Chefmate.UI/Themes/MenumateTheme.xaml
@@ -233,6 +233,12 @@
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
+    <Style x:Key="WebOrderHeaderTextBlock" TargetType="{x:Type TextBlock}">
+        <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <!--<Setter Property="MaxHeight" Value="25"></Setter>-->
+    </Style>
 
     <!--TabItem Style-->
     <Style TargetType="{x:Type TabItem}">
