--- a/ChefMate/Chefmate.UI/Themes/MenumateTheme.xaml
+++ b/ChefMate/Chefmate.UI/Themes/MenumateTheme.xaml
@@ -40,7 +40,7 @@
         <Setter Property="HorizontalContentAlignment" Value="Center"></Setter>
         <Setter Property="VerticalAlignment" Value="Center"></Setter>
     </Style>
-   
+
     <Style x:Key="HeaderTopStyle" TargetType="{x:Type Label}">
         <Setter Property="Background" Value="#F09422"/>
         <Setter Property="Height" Value="5"/>
@@ -77,13 +77,13 @@
         <Setter Property="VerticalAlignment" Value="Stretch"></Setter>
         <Setter Property="TextWrapping" Value="Wrap"></Setter>
         <Setter Property="FontWeight" Value="Bold"/>
-        <Setter Property="MaxHeight" Value="50"></Setter>
+        <Setter Property="Height" Value="50"></Setter>
     </Style>
     <Style x:Key="ItemLable" TargetType="{x:Type TextBlock}">
         <Setter Property="Text" Value="{Binding Name}"></Setter>
         <Setter Property="TextWrapping" Value="Wrap"></Setter>
         <Setter Property="VerticalAlignment" Value="Center"></Setter>
-        <Setter Property="MaxHeight" Value="50"></Setter>
+        <Setter Property="Height" Value="50"></Setter>
         <Style.Triggers>
             <DataTrigger Binding="{Binding OrderStatus}" Value="{x:Static enums:OrderStatus.Bumped}">
                 <Setter Property="TextBlock.TextDecorations" >
@@ -130,7 +130,6 @@
         </Style.Triggers>
     </Style>
     <Style x:Key="SideLable" TargetType="{x:Type TextBlock}">
-        <Setter Property="MaxHeight" Value="50"></Setter>
         <Setter Property="Height" Value="50"></Setter>
         <Setter Property="VerticalAlignment" Value="Center"></Setter>
         <Setter Property="TextWrapping" Value="Wrap"></Setter>
@@ -168,7 +167,6 @@
     </Style>
     <Style x:Key="OptionLable" TargetType="{x:Type TextBlock}">
         <Setter Property="Height" Value="50"></Setter>
-        <Setter Property="MaxHeight" Value="50"></Setter>
         <Setter Property="VerticalAlignment" Value="Center"></Setter>
         <Setter Property="TextWrapping" Value="Wrap"></Setter>
         <Style.Triggers>
@@ -219,7 +217,7 @@
         <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="MaxHeight" Value="50"></Setter>
+        <Setter Property="Height" Value="50"></Setter>
     </Style>
     <Style x:Key="OrderHeaderTableTextBlock" TargetType="{x:Type TextBlock}">
         <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
@@ -235,9 +233,10 @@
     </Style>
     <Style x:Key="WebOrderHeaderTextBlock" TargetType="{x:Type TextBlock}">
         <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
-        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
-        <!--<Setter Property="MaxHeight" Value="25"></Setter>-->
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Height" Value="30"></Setter>
     </Style>
 
     <!--TabItem Style-->
