--- a/ChefMate/Chefmate.UI/UserControls/PopupButton.xaml
+++ b/ChefMate/Chefmate.UI/UserControls/PopupButton.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:system="clr-namespace:System;assembly=mscorlib"
              Name="OrderControl"
-             xmlns:converters="clr-namespace:Chefmate.UI.Converters" MaxHeight="50"  MinHeight="50">
+             xmlns:converters="clr-namespace:Chefmate.UI.Converters">
     <UserControl.Resources>
         <converters:OrderStatusToColorConverter x:Key="OrderStatusToColorConverter"/>
         <Style TargetType="{x:Type ComboBoxItem}">
