--- a/ChefMate/Chefmate.UI/UserControls/OrderControl.xaml
+++ b/ChefMate/Chefmate.UI/UserControls/OrderControl.xaml
@@ -12,7 +12,7 @@
                         <Setter Property="Template">
                             <Setter.Value>
                                 <ControlTemplate>
-                                    <Border Style="{StaticResource GroupBorder}">
+                                    <Border Style="{StaticResource AnalysisGroupBorder}">
                                         <Grid Background="#5B9BD5">
                                             <StackPanel Grid.Column="0" Orientation="Vertical" Height="100" VerticalAlignment="Center">
                                                 <TextBlock   Style="{StaticResource WebOrderHeaderTextBlock}" Text="{Binding Path = Order.CustomerName, StringFormat=' From: {0}'}"/>
