--- a/ChefMate/Chefmate.UI/Views/MainWindow.xaml
+++ b/ChefMate/Chefmate.UI/Views/MainWindow.xaml
@@ -1,7 +1,8 @@
 ﻿<Window x:Class="Chefmate.UI.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        WindowState="Maximized" WindowStyle="None" Background="White" Icon="../Images/C_Transparent.ico">
+        WindowState="Maximized" WindowStyle="None" Background="White" Icon="../Images/C_Transparent.ico"
+        FontFamily="Tahoma">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -19,7 +20,7 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width=".6*"/>
             </Grid.ColumnDefinitions>
-            <Grid Grid.Column="0" HorizontalAlignment="Stretch" Background="#F09422">
+            <Grid Grid.Column="0" HorizontalAlignment="Stretch" Background="{Binding GuiStyles.HeaderBackGround}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width=".25*"/>
                     <ColumnDefinition Width=".25*"/>
