--- a/ChefMate/Chefmate.UI/Views/RecallOrderView.xaml
+++ b/ChefMate/Chefmate.UI/Views/RecallOrderView.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Chefmate.UI.Views.RecallOrderView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Width="{Binding WindowWidth}" WindowStyle="None" ResizeMode="NoResize"
-        BorderThickness="3" BorderBrush="Gray" WindowStartupLocation="CenterScreen" Icon="../Images/C_Transparent.ico">
+        BorderThickness="3" BorderBrush="Gray" WindowStartupLocation="CenterScreen" Icon="../Images/C_Transparent.ico" FontFamily="Tahoma">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
