--- a/ChefMate/Chefmate.UI/Views/StartupView.xaml
+++ b/ChefMate/Chefmate.UI/Views/StartupView.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:behaviours="clr-namespace:Chefmate.UI.Behaviours"
-        Width="500" Height="250"
+        Width="500" Height="250" FontFamily="Tahoma"
         WindowStyle="None" ResizeMode="NoResize" BorderThickness="3" BorderBrush="Gray"
         WindowStartupLocation="CenterScreen" Icon="../Images/C_Transparent.ico">
     <Window.Resources>
