--- a/ChefMate/Chefmate.UI/Views/SummaryView.xaml
+++ b/ChefMate/Chefmate.UI/Views/SummaryView.xaml
@@ -9,74 +9,109 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
-    <Grid>
+
+    <Grid Name="OuterGrid">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width=".5*"/>
-            <ColumnDefinition Width=".5*"/>
+            <ColumnDefinition Width=".70*"/>
+            <ColumnDefinition Width=".3*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height=".10*"/>
-            <RowDefinition Height=".80*"/>
-            <RowDefinition Height=".10*"/>
+            <RowDefinition Height=".1*"/>
+            <RowDefinition Height=".9*"/>
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0" Grid.Column="0" Margin="10,5,10,5">
+        <!--<Grid Grid.Row="0" Grid.Column="0" Margin="10,5,10,5">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Button  Grid.Column="0" HorizontalAlignment="Left"
-                                      Command="{x:Static ScrollBar.LineUpCommand}"       
-                                      CommandTarget="{Binding ElementName=OrdersScrollBar}"
-                                      ClickMode="Press">
-                <Path Data="M 0 0 L 30 0 L 15 15 Z">
-                    <Path.LayoutTransform>
-                        <RotateTransform Angle="180"></RotateTransform>
-                    </Path.LayoutTransform>
-                </Path>
-            </Button>
-            <Button  Grid.Column="1" HorizontalAlignment="Right"
-                                      Command="{x:Static ScrollBar.LineDownCommand}"       
-                                      CommandTarget="{Binding ElementName=OrdersScrollBar}"
-                                      ClickMode="Press">
-                <Path Data="M 0 0 L 30 0 L 15 15 Z"/>
-            </Button>
+
         </Grid>
         <Grid Grid.Row="0" Grid.Column="1" Margin="10,5,10,5">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Button  Grid.Column="0" HorizontalAlignment="Left"
-                                      Command="{x:Static ScrollBar.LineUpCommand}"       
-                                      CommandTarget="{Binding ElementName=ItemsScrollBar}"
-                                      ClickMode="Press">
-                <Path Data="M 0 0 L 30 0 L 15 15 Z">
-                    <Path.LayoutTransform>
-                        <RotateTransform Angle="180"></RotateTransform>
-                    </Path.LayoutTransform>
-                </Path>
-            </Button>
-            <Button  Grid.Column="1" HorizontalAlignment="Right"
-                                      Command="{x:Static ScrollBar.LineDownCommand}"       
-                                      CommandTarget="{Binding ElementName=ItemsScrollBar}"
-                                      ClickMode="Press">
-                <Path Data="M 0 0 L 30 0 L 15 15 Z" />
-            </Button>
+
+        </Grid>-->
+        <!--<Grid Grid.Row="0" Background="#F09422">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width=".75*"/>
+                <ColumnDefinition Width=".25*" />
+            </Grid.ColumnDefinitions>            
+        </Grid>-->
+        <Grid Grid.Row="0" Grid.Column="0" Background="#F09422" >
+            <Label FontSize="24"   Content="Items Summary" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" />
         </Grid>
-        <ScrollViewer Name="OrdersScrollBar" Grid.Row="1" Grid.Column="0" Margin="5,0,5,0"
-                      HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden">
-            <Grid>
-                <DataGrid Height="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}, Path=ActualHeight}"
+        <Grid Grid.Row="0" Grid.Column="1" HorizontalAlignment="Stretch">
+            <!--<Grid Grid.Column="1" HorizontalAlignment="Stretch">-->
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width=".20*"/>
+                <ColumnDefinition Width=".15*"/>
+                <ColumnDefinition Width=".15*"/>
+                <ColumnDefinition Width=".15*"/>
+                <ColumnDefinition Width=".15*"/>
+                <ColumnDefinition Width=".20*"/>
+            </Grid.ColumnDefinitions>
+            <Button Style="{StaticResource FunctionButtonStyle}"  Command="{Binding AutoUpdateCommand}" Grid.Column="0" Content="Update UI" Background="#FFF09422" />
+            <!--<Button Style="{StaticResource FunctionButtonStyle}" Margin="5" Grid.Column="0"  Background="#FFF09422" Command="{Binding AutoUpdateCommand}">Update UI </Button>-->
+            <Button Style="{StaticResource NavigationButtonStyle}" Grid.Column="1" Command="{Binding NavigateLeftCommand}"
+                        Name="LeftNavigationButton">
+                <Path Data="M 0 0 L 0 40 L5 40 L 5 20 L 40 40 L 40 0 L 5 20 L 5 0  Z"/>
+            </Button>
+            <Button Style="{StaticResource NavigationButtonStyle}" Grid.Column="2" Command="{Binding NavigateBackwardCommand}"
+                        Name="BackwardNavigationButton">
+                <Path Data="M 0 20 L 40 40 L 40 0 Z"/>
+            </Button>
+            <Button Style="{StaticResource NavigationButtonStyle}" Grid.Column="3" Command="{Binding NavigateForwardCommand}"
+                        Name="ForwardNavigationButton">
+                <Path Data="M 0 0 L 0 40 L 40 20 Z"/>
+            </Button>
+            <Button Style="{StaticResource NavigationButtonStyle}" Grid.Column="4" Command="{Binding NavigateRightCommand}"
+                        Name="RightNavigationButton">
+                <Path Data="M 0 0 L 0 40 L 35 20 L 35 40 L 40 40 L 40 0 L 35 0 L 35 20 Z"/>
+            </Button>
+            <Button Style="{StaticResource FunctionButtonStyle}" Grid.Column="5" Background="#FFF09422"  Command="{Binding CloseCommand}">Close</Button>
+            <!--<Button Style="{StaticResource FunctionButtonStyle}" Grid.Column="5" Click="CloseCommand" Content="Exit" Background="#FFF09422"/>-->
+            <!--</Grid>-->
+        </Grid>
+        <Grid Grid.Row="1" Grid.ColumnSpan="2">
+
+            <!--<Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>-->
+
+            <ListBox Name="ItemSummaryList"  ScrollViewer.HorizontalScrollBarVisibility="Auto">
+
+                <ListBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel Orientation="Vertical" Height="850">
+                        </WrapPanel>
+                    </ItemsPanelTemplate>
+                </ListBox.ItemsPanel>
+                <ListBox.ItemTemplate>
+                    <DataTemplate >
+                        <StackPanel Name="S1" Orientation="Vertical"  Width="350">
+                            <Border CornerRadius="1" BorderThickness="2" BorderBrush="#C4D3C4" Background="#C4D3C4" Margin="2">
+                                <Label FontSize="22" Content="{Binding Path=DataContext, RelativeSource={RelativeSource Self}}" VerticalAlignment="Center">
+                                </Label>
+                            </Border>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            <!--<DataGrid Height="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}, Path=ActualHeight}"
                           Width= "500" HorizontalAlignment="Left" Margin="12,21,0,0" 
                 Name="McDataGrid" VerticalAlignment="Top" RowHeight="30" ColumnWidth="100" 
                   ColumnHeaderHeight="50" HeadersVisibility="Column"
-                  Background="LightGray"                   
-                          
-                  BorderBrush="Gray" BorderThickness="5" AutoGenerateColumns="False" FrozenColumnCount="1">
-                    <DataGrid.Columns >
+                  Background="LightGray"  BorderBrush="Gray" BorderThickness="5" AutoGenerateColumns="False" FrozenColumnCount="1">
+
+                
+                    <DataGrid.Columns>
                         <DataGridTextColumn 
                             Header="Item List"
                             Width="800"
+                            MinWidth="800"
                             FontSize="24"   
                             Binding="{Binding Path=DataContext, RelativeSource={RelativeSource Self}}" >
                             <DataGridTextColumn.ElementStyle>
@@ -90,16 +125,15 @@
                         </DataGridTextColumn>
 
                     </DataGrid.Columns>
-                </DataGrid>
-            </Grid>
-        </ScrollViewer>
-        <ScrollViewer Name="ItemsScrollBar" Grid.Row="1" Grid.Column="1" Margin="5,0,5,0"
-                      HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden">
-        </ScrollViewer>
+                </DataGrid>-->
+
+        </Grid>
+        <!--</ScrollViewer>-->
+
         <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource FormLabel}" Foreground="Red" Content="{Binding StatusText}"></Label>
-        <StackPanel Grid.Row="2" Grid.Column="1" HorizontalAlignment="Right" Orientation="Horizontal">
+        <!--<StackPanel Grid.Row="2" Grid.Column="1" HorizontalAlignment="Right" Orientation="Horizontal">
             <Button Margin="5" Command="{Binding AutoUpdateCommand}">Update UI</Button>
             <Button Margin="5" Command="{Binding CloseCommand}">Close</Button>
-        </StackPanel>
+        </StackPanel>-->
     </Grid>
 </Window>
